# eht

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  eht.c  eht_priv.h
src/include/easyht/: eht.h
src/tests/: CMakeLists.txt  main.c
src/tests/string/: main.c
